--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,37 +1,35 @@
-
-FROM php:8.0-fpm-alpine
+FROM php:7.4-fpm
 
 ENV TZ Asia/Tokyo
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
-# install Lib
-RUN set -eux \
- && apk add --update-cache --no-cache openssl git autoconf g++ nodejs npm yarn oniguruma-dev postgresql-dev libtool make libzip-dev libpng-dev libjpeg-turbo-dev freetype-dev libwebp-dev libxpm-dev \
-# && apt-get install -y libicu-dev \
- && pecl install redis \
- && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp --with-xpm \
- && docker-php-ext-configure opcache --enable-opcache \
- && docker-php-ext-install gd pdo_pgsql pgsql opcache bcmath gd exif zip \
- && docker-php-ext-enable redis \
- && apk del autoconf g++ libtool make \
- && rm -rf /tmp/* \
+# install Lib for composer
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
+    apt-get update -qq && \
+    apt-get install -y libicu-dev &&\
+    apt-get install --no-install-recommends -y libpq-dev libonig-dev libxml2-dev nodejs git zip unzip && \
+    apt-get install --no-install-recommends -y zlib1g-dev libfreetype6-dev libpng-dev libjpeg62-turbo-dev libwebp-dev libxpm-dev && \
+    apt-get clean && \
+    rm -rf /var/cache/apt && \
+    npm install npm@latest -g
 
-# PHP の intl 拡張 (CakePHP 4 で必要)
-#apt-get install -y libicu-dev &&\
-#    docker-php-ext-install intl \
+# add extention
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp --with-xpm && \
+    docker-php-ext-install -j$(nproc) gd && \
+    docker-php-ext-install mbstring pdo pdo_pgsql json &&\
+    docker-php-ext-install intl
 
-# add extension
-RUN docker-php-ext-install mbstring pdo pdo_pgsql && \
-#    docker-php-ext-install intl && \
-    docker-php-ext-enable mbstring
-
+# php.conf php-fpm.conf
 COPY conf/php.ini /usr/local/etc/php/php.ini
 COPY conf/docker.conf /usr/local/etc/php-fpm.d/docker.conf
 
 # install Composer
 RUN curl -sS https://getcomposer.org/installer | php && \
     mv composer.phar /usr/local/bin/composer && \
-    chmod +x /usr/local/bin/composer \
-
+    chmod +x /usr/local/bin/composer
 
 WORKDIR /app
+
+# CakePHP 4 で必要な依存関係である拡張機能
+#    apt-get install -y libicu-dev &&\
+#    docker-php-ext-install intl \
